--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,20 +20,19 @@ body {
 }
 
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0px;
 }
 
 ::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0.3);
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: linear-gradient(180deg, #7c6ba1, #8b7fa8);
-  border-radius: 10px;
+  background: transparent;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(180deg, #9d8bb5, #a89cb0);
+  background: transparent;
 }
 
 ::selection {
