--- a/src/Componants/Auth/SignIn.css
+++ b/src/Componants/Auth/SignIn.css
@@ -53,6 +53,7 @@ html, body, #root {
   overflow-y: auto;
   overflow-x: hidden;
   gap: 0;
+  margin-top: 40px;
   max-height: none;
 }
 
@@ -70,7 +71,7 @@ html, body, #root {
 /* Logo Section */
 .signin-logo-section {
   text-align: center;
-  margin-bottom: 1.8rem;
+  /* margin-bottom: 1.8rem; */
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
