--- a/src/Componants/Auth/Signup.css
+++ b/src/Componants/Auth/Signup.css
@@ -52,6 +52,7 @@ html, body, #root {
   flex-direction: column;
   overflow-y: auto;
   overflow-x: hidden;
+  margin-top: 30px;
   gap: 0;
   max-height: none;
 }
@@ -70,7 +71,7 @@ html, body, #root {
 /* Logo Section */
 .signup-logo-section {
   text-align: center;
-  margin-bottom: 1.8rem;
+  /* margin-bottom: .8rem; */
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
@@ -78,6 +79,7 @@ html, body, #root {
   align-items: center;
   gap: 0.8rem;
   overflow-y: auto;
+  /* margin-top: 20px; */
 }
 
 .signup-logo {
